package org.stroganov.dialogue.states;

public class AdminMenuState extends UserMenuState {
}
