package org.stroganov.dialogue.states;

import java.util.List;

public class UserMenuState extends State{
    @Override
    public void showStateMenu() {

    }

    @Override
    public void showMessage(String message) {

    }

    @Override
    public List<String> getUserAnswerString() {
        return null;
    }

    @Override
    public void doStateAction() {

    }
}
