@startuml

title __STATES's Class Diagram__\n

  namespace org.stroganov {
    namespace dialogue {
      namespace states {
        class org.stroganov.dialogue.states.AdminMenuState {
        }
      }
    }
  }
  

  namespace org.stroganov {
    namespace dialogue {
      namespace states {
        class org.stroganov.dialogue.states.LoginState {
            + doStateAction()
            + getUserAnswerString()
            + showMessage()
            + showStateMenu()
        }
      }
    }
  }
  

  namespace org.stroganov {
    namespace dialogue {
      namespace states {
        abstract class org.stroganov.dialogue.states.State {
            + State()
        }
      }
    }
  }
  

  namespace org.stroganov {
    namespace dialogue {
      namespace states {
        interface org.stroganov.dialogue.states.StateAction {
            {abstract} + doStateAction()
            {abstract} + getUserAnswerString()
            {abstract} + showMessage()
            {abstract} + showStateMenu()
        }
      }
    }
  }
  

  namespace org.stroganov {
    namespace dialogue {
      namespace states {
        class org.stroganov.dialogue.states.UserMenuState {
            + doStateAction()
            + getUserAnswerString()
            + showMessage()
            + showStateMenu()
        }
      }
    }
  }
  

  org.stroganov.dialogue.states.AdminMenuState -up-|> org.stroganov.dialogue.states.UserMenuState
  org.stroganov.dialogue.states.LoginState -up-|> org.stroganov.dialogue.states.State
  org.stroganov.dialogue.states.State .up.|> org.stroganov.dialogue.states.StateAction
  org.stroganov.dialogue.states.State o-- org.stroganov.gui.UserInterface : userInterface
  org.stroganov.dialogue.states.UserMenuState -up-|> org.stroganov.dialogue.states.State


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
